# file-info

./: .gitignore  CMakeLists.txt  Makefile  README.md  file_info.h  main.c
include/: display.h
src/: display.c  file_info.c  main.c
